--- a/.github/workflows/codedeploy.yml
+++ b/.github/workflows/codedeploy.yml
@@ -25,14 +25,11 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:   
       - uses: chrislennon/action-aws-cli@v1.1
-      
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-session-token: ${{ secrets.AWS_SESSION_TOKEN }}
-          aws-region: ap-northeast-1
+        env:
+          AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_SESSION_TOKEN=${{ secrets.AWS_SESSION_TOKEN }}
+          AWS_DEFAULT_REGION=ap-northeast-1
       
       - name: Create revision with CodeDeploy
         run: |
