--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,8 +7,4 @@ services:
     volumes:
       - ./:/src
     working_dir: /src
-    environment:
-      - AWS_ACCESS_KEY_ID
-      - AWS_SECRET_ACCESS_KEY
-      - AWS_SESSION_TOKEN
-      - AWS_DEFAULT_REGION=ap-northeast-1
+    env_file: .env
