--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,9 +2,11 @@ name: Test
 
 on:
   pull_request:
-    paths: 
-      - 'src/**'
-    types: [opened, synchronize]
+    types:
+      - opened
+      - synchronize
+    paths:
+      - 'src/*'
 
 jobs:
   test:
