--- a/.github/workflows/test_dev.yml
+++ b/.github/workflows/test_dev.yml
@@ -1,11 +1,10 @@
 name: Dev Test
 
 on:
-  push:
-    branches:
-      - '!master'
-    paths: 'src/dev/**'
   pull_request:
+  push:
+    paths:
+      - 'src/dev/**'
 
 jobs:
   test:
