--- a/.github/workflows/test_dev.yml
+++ b/.github/workflows/test_dev.yml
@@ -1,8 +1,10 @@
 name: Dev Test
 
 on:
-  pull_request:
   push:
+    paths:
+      - 'src/dev/**'
+  pull_request:
     paths:
       - 'src/dev/**'
 
@@ -15,7 +17,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Run a one-line script
-        run: echo {{ secrets.TEST_SECRETS }}
+        run: echo development 
 
       - name: Run a multi-line script
         run: |
