--- a/.github/workflows/deploy_prd.yml
+++ b/.github/workflows/deploy_prd.yml
@@ -1,9 +1,7 @@
 name: Prd Deploy
 
 on:
-  pull_request:
-    types:
-      - closed
+  workflow_dispatch:
     branches:
       - master
     paths: 
